--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Rahul Kumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.2",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.21.2",
+    "mongoose": "^6.2.7",
     "pug": "^3.0.2"
   }
 }
